compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__functions__multiple_discard.snap
---
source: compiler-core/src/javascript/tests/functions.rs
expression: "pub fn main(_, _, _) {\n  1\n}\n"
---
----- SOURCE CODE
pub fn main(_, _, _) {
  1
}


----- COMPILED JAVASCRIPT
export function main(_, _1, _2) {
  return 1n;
}
