compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__functions__no_recur_in_anon_fn.snap
---
source: compiler-core/src/javascript/tests/functions.rs
expression: "pub fn main() {\n  fn() { main() }\n  1\n}\n"
---
----- SOURCE CODE
pub fn main() {
  fn() { main() }
  1
}


----- COMPILED JAVASCRIPT
export function main() {
  () => { return main(); };
  return 1n;
}
