compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__functions__pipe_last.snap
---
source: compiler-core/src/javascript/tests/functions.rs
expression: "fn id(x) { x }\npub fn main() {\n  1\n  |> id\n}\n"
---
----- SOURCE CODE
fn id(x) { x }
pub fn main() {
  1
  |> id
}


----- COMPILED JAVASCRIPT
function id(x) {
  return x;
}

export function main() {
  let _pipe = 1n;
  return id(_pipe);
}
