compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__functions__pipe_variable_rebinding.snap
---
source: compiler-core/src/javascript/tests/functions.rs
expression: "\npub fn main() {\n  let version = 1 |> version()\n  version\n}\n\npub fn version(n) {\n  Ok(1)\n}"
---
----- SOURCE CODE

pub fn main() {
  let version = 1 |> version()
  version
}

pub fn version(n) {
  Ok(1)
}

----- COMPILED JAVASCRIPT
import { Ok } from "../gleam.mjs";

export function version(n) {
  return new Ok(1n);
}

export function main() {
  let version$1 = (() => {
    let _pipe = 1n;
    return version(_pipe);
  })();
  return version$1;
}
