compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__functions__recursion_with_discards.snap
---
source: compiler-core/src/javascript/tests/functions.rs
expression: "pub fn main(f, _) {\n  f()\n  main(f, 1)\n}\n"
---
----- SOURCE CODE
pub fn main(f, _) {
  f()
  main(f, 1)
}


----- COMPILED JAVASCRIPT
export function main(loop$f, _) {
  while (true) {
    let f = loop$f;
    f();
    loop$f = f;
    1n;
  }
}
