compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__functions__shadowing_current.snap
---
source: compiler-core/src/javascript/tests/functions.rs
expression: "pub fn main() {\n  let main = fn() { 0 }\n  main()\n}\n"
---
----- SOURCE CODE
pub fn main() {
  let main = fn() { 0 }
  main()
}


----- COMPILED JAVASCRIPT
export function main() {
  let main$1 = () => { return 0n; };
  return main$1();
}
